1. 修改 License 为 Apache 2 2. 降低 JDK 版本为 8